force-app/main/default/objects/Employee__c/fields/ActiveInCrew__c.field-meta.xml
<CustomField>
    <fullName>ActiveInCrew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActiveInCrew</label>
    <type>Checkbox</type>
</CustomField>