force-app/main/default/objects/Employee__c/fields/activitycode__c.field-meta.xml
<CustomField>
    <fullName>activitycode__c</fullName>
    <description>The employee’s activity code</description>
    <label>Activity Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>