force-app/main/default/objects/Employee__c/fields/companycode__c.field-meta.xml
<CustomField>
    <fullName>companycode__c</fullName>
    <description>The employee’s company code</description>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>