force-app/main/default/objects/Employee__c/fields/companycode_name__c.field-meta.xml
<CustomField>
    <fullName>companycode_name__c</fullName>
    <description>The employee’s company name</description>
    <label>Company Code Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>