force-app/main/default/objects/Employee__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>Employee Cost Center</relationshipLabel>
    <relationshipName>Employees_Cost_Center</relationshipName>
    <type>Lookup</type>
</CustomField>