force-app/main/default/objects/Employee__c/fields/CrewName__c.field-meta.xml
<CustomField>
    <fullName>CrewName__c</fullName>
    <formula>IF( Crew__r.MiddleName &lt;&gt; NULL, Crew__r.FirstName &amp; &quot; &quot; &amp;  Crew__r.MiddleName  &amp; &quot; &quot; &amp;  Crew__r.LastName, Crew__r.FirstName  &amp; &quot; &quot; &amp;  Crew__r.LastName)</formula>
    <label>Crew Name</label>
    <type>Text</type>
</CustomField>