force-app/main/default/objects/Employee__c/fields/EE_Name__c.field-meta.xml
<CustomField>
    <fullName>EE_Name__c</fullName>
    <description>46841 Youreka requires an Employee field in the template but we want to prevent direct editing so this works to manage that challenge</description>
    <formula>firstname__c &amp;&quot; &quot;&amp; lastname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First and Last Name</inlineHelpText>
    <label>EE Name</label>
    <type>Text</type>
</CustomField>