force-app/main/default/objects/Employee__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>The employee’s email</description>
    <label>Email</label>
    <length>64</length>
    <type>Text</type>
</CustomField>