force-app/main/default/objects/Employee__c/fields/employeegroup__c.field-meta.xml
<CustomField>
    <fullName>employeegroup__c</fullName>
    <description>The employee’s group</description>
    <label>Employee Group</label>
    <length>1</length>
    <type>Text</type>
</CustomField>