force-app/main/default/objects/Employee__c/fields/EmployeeJobDescription__c.field-meta.xml
<CustomField>
    <fullName>EmployeeJobDescription__c</fullName>
    <formula>SFS_User__r.EmployeeJobDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Job Description</label>
    <type>Text</type>
</CustomField>