force-app/main/default/objects/Employee__c/fields/employeename__c.field-meta.xml
<CustomField>
    <fullName>employeename__c</fullName>
    <description>The employee’s name</description>
    <label>Employee Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>