force-app/main/default/objects/Employee__c/fields/EmployeeNameJobDesc__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNameJobDesc__c</fullName>
    <formula>Name  &amp; &quot; - &quot; &amp;   SFS_User_Profile_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name Job Desc</label>
    <type>Text</type>
</CustomField>