force-app/main/default/objects/Employee__c/fields/employeesubgroup__c.field-meta.xml
<CustomField>
    <fullName>employeesubgroup__c</fullName>
    <description>The employee’s subgroup</description>
    <label>Employee Sub Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>