force-app/main/default/objects/Employee__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <description>The employee’s employment status code</description>
    <inlineHelpText>3 = Active, 1 = Inactive, 0 = Withdrawn</inlineHelpText>
    <label>Employment Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>