force-app/main/default/objects/Employee__c/fields/firstname__c.field-meta.xml
<CustomField>
    <fullName>firstname__c</fullName>
    <description>The employee’s first name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>