force-app/main/default/objects/Employee__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Employees Form</relationshipLabel>
    <relationshipName>Employees_Form</relationshipName>
    <type>Lookup</type>
</CustomField>