force-app/main/default/objects/Employee__c/fields/homestate__c.field-meta.xml
<CustomField>
    <fullName>homestate__c</fullName>
    <description>The employee’s home state</description>
    <label>homestate</label>
    <length>4</length>
    <type>Text</type>
</CustomField>