force-app/main/default/objects/Employee__c/fields/hourlysalaried__c.field-meta.xml
<CustomField>
    <fullName>hourlysalaried__c</fullName>
    <description>The employee’s employment status, hourly or salaried</description>
    <label>Hourly/Salaried</label>
    <length>8</length>
    <type>Text</type>
</CustomField>