force-app/main/default/objects/Employee__c/fields/hourlysalariedcode__c.field-meta.xml
<CustomField>
    <fullName>hourlysalariedcode__c</fullName>
    <description>The hourly or salaried code (1 = hourly, 3 = salaried)</description>
    <label>Hourly/Salaried Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>