force-app/main/default/objects/Employee__c/fields/IsCraft__c.field-meta.xml
<CustomField>
    <fullName>IsCraft__c</fullName>
    <formula>AND( hourlysalaried__c = &apos;Hourly&apos;, 
      IF (
            SubArea__c = &apos;ADMN&apos; ,
            false,
            OR(
               SubArea__c = &apos;NONU&apos; , 
               SubArea__c = &apos;UNIO&apos; 
               )
           )
     )</formula>
    <label>IsCraft</label>
    <type>Checkbox</type>
</CustomField>