force-app/main/default/objects/Employee__c/fields/IsNotUnion__c.field-meta.xml
<CustomField>
    <fullName>IsNotUnion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNotUnion</label>
    <type>Checkbox</type>
</CustomField>