force-app/main/default/objects/Employee__c/fields/IsSFSUserAlreadyAssigned__c.field-meta.xml
<CustomField>
    <fullName>IsSFSUserAlreadyAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSFSUserAlreadyAssigned?</label>
    <type>Checkbox</type>
</CustomField>