force-app/main/default/objects/Employee__c/fields/lastname__c.field-meta.xml
<CustomField>
    <fullName>lastname__c</fullName>
    <description>The employee’s last name</description>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>