force-app/main/default/objects/Employee__c/fields/LastWorkDate__c.field-meta.xml
<CustomField>
    <fullName>LastWorkDate__c</fullName>
    <label>LastWorkDate</label>
    <type>Date</type>
</CustomField>