force-app/main/default/objects/Employee__c/fields/middlename__c.field-meta.xml
<CustomField>
    <fullName>middlename__c</fullName>
    <description>The employee’s middle name</description>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>