force-app/main/default/objects/Employee__c/fields/p_end_date__c.field-meta.xml
<CustomField>
    <fullName>p_end_date__c</fullName>
    <description>The value sent in as a key</description>
    <label>p_end_date</label>
    <type>DateTime</type>
</CustomField>