force-app/main/default/objects/Employee__c/fields/persnumber__c.field-meta.xml
<CustomField>
    <fullName>persnumber__c</fullName>
    <description>The employee’s employee ID</description>
    <label>persnumber</label>
    <length>8</length>
    <type>Text</type>
</CustomField>