force-app/main/default/objects/Employee__c/fields/personnelarea__c.field-meta.xml
<CustomField>
    <fullName>personnelarea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personnel Area</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Employees Area</relationshipLabel>
    <relationshipName>Employees_Area</relationshipName>
    <type>Lookup</type>
</CustomField>