force-app/main/default/objects/Employee__c/fields/PersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonnelNumber__c</fullName>
    <externalId>true</externalId>
    <label>Personnel Number</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>