force-app/main/default/objects/Employee__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profit Center</label>
    <referenceTo>Profit_Center__c</referenceTo>
    <relationshipLabel>Employees Profit Center</relationshipLabel>
    <relationshipName>Employees_Profit_Center</relationshipName>
    <type>Lookup</type>
</CustomField>