force-app/main/default/objects/Employee__c/fields/salesarea__c.field-meta.xml
<CustomField>
    <fullName>salesarea__c</fullName>
    <description>The employee’s sales area</description>
    <label>Sales Area</label>
    <length>4</length>
    <type>Text</type>
</CustomField>