force-app/main/default/objects/Employee__c/fields/SAP_Last4SSN__c.field-meta.xml
<CustomField>
    <fullName>SAP_Last4SSN__c</fullName>
    <label>SAP Last4SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>