force-app/main/default/objects/Employee__c/fields/SFS_User__c.field-meta.xml
<CustomField>
    <fullName>SFS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EmployeesSFSUser</relationshipName>
    <type>Lookup</type>
</CustomField>