force-app/main/default/objects/Employee__c/fields/SFS_User_Active__c.field-meta.xml
<CustomField>
    <fullName>SFS_User_Active__c</fullName>
    <description>45952 Used to deactivate users based on Employment status</description>
    <formula>SFS_User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the related User record&apos;s Active value</inlineHelpText>
    <label>SFS User Active</label>
    <type>Checkbox</type>
</CustomField>