force-app/main/default/objects/Employee__c/fields/SFS_User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>SFS_User_Profile_Name__c</fullName>
    <formula>IF(ISBLANK(SFS_User__r.Profile.Name), &quot;&quot;, 
IF(CONTAINS(SFS_User__r.Profile.Name, &quot;PT1&quot;) , &quot;System Administrator&quot;,SFS_User__r.Profile.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFS User Profile Name</label>
    <type>Text</type>
</CustomField>