force-app/main/default/objects/Employee__c/fields/SubArea__c.field-meta.xml
<CustomField>
    <fullName>SubArea__c</fullName>
    <label>SubArea</label>
    <length>64</length>
    <type>Text</type>
</CustomField>