force-app/main/default/objects/Employee__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <description>The employee’s suffix (i.e. Jr.)</description>
    <label>Title</label>
    <length>4</length>
    <type>Text</type>
</CustomField>