force-app/main/default/objects/Employee__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <description>The employee’s username</description>
    <label>UserName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>