force-app/main/default/objects/Employee__c/validationRules/Abort_Employee_Save.validationRule-meta.xml
<ValidationRule>
    <fullName>Abort_Employee_Save</fullName>
    <active>true</active>
    <description>Abort employee save if the sfs user is reused.</description>
    <errorConditionFormula>IsSFSUserAlreadyAssigned__c</errorConditionFormula>
    <errorMessage>The SFS user already being used for another Employee.</errorMessage>
</ValidationRule>