force-app/main/default/objects/Employee__c/validationRules/MATCH_Personnel_Number_Service_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>MATCH_Personnel_Number_Service_Resource</fullName>
    <active>false</active>
    <description>45751 When added the Service Resource&apos;s Personnel Number should align with the Employee record Personnel Number</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Service_Resource__c  )),
 PersonnelNumber__c &lt;&gt; Service_Resource__r.NPL_Personnel_Number__c )</errorConditionFormula>
    <errorMessage>When added the Service Resource&apos;s Personnel Number should align with the Employee record Personnel Number</errorMessage>
</ValidationRule>