force-app/main/default/objects/Employee__c/validationRules/MATCH_Personnel_Number_SFS_User.validationRule-meta.xml
<ValidationRule>
    <fullName>MATCH_Personnel_Number_SFS_User</fullName>
    <active>false</active>
    <description>45751 When added the SFS User&apos;s Personnel Number should align with the Employee record Personnel Number</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( SFS_User__c )),
 PersonnelNumber__c &lt;&gt; SFS_User__r.PersonnelNumberID__c)</errorConditionFormula>
    <errorMessage>When added the SFS User&apos;s Personnel Number should align with the Employee record Personnel Number</errorMessage>
</ValidationRule>