force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>PersonnelNumber__c</columns>
    <columns>SFS_User__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>email__c</columns>
    <columns>EmploymentStatus__c</columns>
    <columns>hourlysalaried__c</columns>
    <columns>IsNotUnion__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>personnelarea__c</columns>
    <columns>SubArea__c</columns>
    <columns>IsCraft__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>