force-app/main/default/objects/Employee__c/listViews/Employees_to_Provision.listView-meta.xml
<ListView>
    <fullName>Employees_to_Provision</fullName>
    <columns>NAME</columns>
    <columns>email__c</columns>
    <columns>SFS_User__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>PersonnelNumber__c</columns>
    <columns>EmploymentStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Resource__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>email__c</field>
        <operation>equals</operation>
        <value>BUSINESS@CENTURI.COM</value>
    </filters>
    <filters>
        <field>EmploymentStatus__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Employees to Provision</label>
</ListView>